# Baldin

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 87d14f00423e_create_users_table.py  d517b49179b9_test_async_final.py
backend/src/: main.py
backend/src/core/: database.py  settings.py
backend/src/models/: user.py
frontend/: package-lock.json  package.json  postcss.config.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/cadastro/: page.tsx
frontend/src/components/ui/: Input.tsx  Select.tsx  ThemeToggle.tsx
frontend/src/hooks/: useRegisterForm.ts
frontend/src/services/: api.ts  authService.ts
frontend/src/types/: auth.ts  form.ts
frontend/src/utils/: storage.ts
